--- a/styles/input.css
+++ b/styles/input.css
@@ -305,7 +305,7 @@ pre[data-linenos] {
   > center > table,
   > left > table,
   > right > table {
-    @apply mx-auto table-auto text-sm text-wrap leading-6 mt-4 mb-6 border border-separate border-spacing-0 rounded-md;
+    @apply mx-auto table-auto text-sm text-wrap leading-6 mt-4 mb-6 border border-separate border-spacing-0 rounded-md overflow-x-scroll block max-w-screen-md;
     background-color: var(--background);
     border-color: var(--border-subtle);
 
